# QtCPUCoreControl

./: .gitignore  CMakeLists.txt  QtCPUCoreControl.desktop  README.md  build.sh  buildHelper.sh  core.cpp  core.h  helper.cpp  install.sh  main.cpp  uninstall.sh
